--- a/series.conf
+++ b/series.conf
@@ -11183,6 +11183,7 @@
 	patches.suse/platform-x86-intel-pmt-decouple-sysfs-and-namespace.patch
 	patches.suse/platform-x86-intel-pmt-add-register-access-helpers.patch
 	patches.suse/platform-x86-intel-pmt-refactor-base-parameter.patch
+	patches.suse/platform-x86-intel-pmt-use-a-version-struct.patch
 	patches.suse/platform-chrome-cros_ec_typec-Defer-probe-on-missing.patch
 	patches.suse/platform-chrome-cros_ec_sensorhub-Retries-when-a-sen.patch
 	patches.suse/platform-chrome-cros_ec-Unregister-notifier-in-cros_.patch
