--- a/series.conf
+++ b/series.conf
@@ -11180,6 +11180,7 @@
 	patches.suse/platform-x86-intel-pmt-use-guard-mutex.patch
 	patches.suse/platform-x86-intel-pmt-re-order-trigger-logic.patch
 	patches.suse/platform-x86-intel-pmt-correct-types.patch
+	patches.suse/platform-x86-intel-pmt-decouple-sysfs-and-namespace.patch
 	patches.suse/platform-chrome-cros_ec_typec-Defer-probe-on-missing.patch
 	patches.suse/platform-chrome-cros_ec_sensorhub-Retries-when-a-sen.patch
 	patches.suse/platform-chrome-cros_ec-Unregister-notifier-in-cros_.patch
