--- a/series.conf
+++ b/series.conf
@@ -11167,6 +11167,7 @@
 	patches.suse/platform-x86-intel-tpmi-Relocate-platform-info-to-in.patch
 	patches.suse/platform-x86-intel-vsec-Set-OOBMSM-to-CPU-mapping.patch
 	patches.suse/platform-x86-intel-tpmi-Get-OOBMSM-CPU-mapping-from-.patch
+	patches.suse/platform-x86-intel-pmt-discovery-Get-telemetry-attri.patch
 	patches.suse/platform-x86-amd-pmc-Add-Lenovo-Yoga-6-13ALC6-to-pmc.patch
 	patches.suse/platform-x86-intel-pmt-fix-a-crashlog-NULL-pointer-a.patch
 	patches.suse/platform-chrome-cros_ec_typec-Defer-probe-on-missing.patch
