platform/x86/intel/vsec: Set OOBMSM to CPU mapping (jsc#PED-14188).

--- a/series.conf
+++ b/series.conf
@@ -11165,6 +11165,7 @@
 	patches.suse/platform-x86-intel-vsec-Add-new-Discovery-feature.patch
 	patches.suse/platform-x86-intel-pmt-Add-PMT-Discovery-driver.patch
 	patches.suse/platform-x86-intel-tpmi-Relocate-platform-info-to-in.patch
+	patches.suse/platform-x86-intel-vsec-Set-OOBMSM-to-CPU-mapping.patch
 	patches.suse/platform-x86-amd-pmc-Add-Lenovo-Yoga-6-13ALC6-to-pmc.patch
 	patches.suse/platform-x86-intel-pmt-fix-a-crashlog-NULL-pointer-a.patch
 	patches.suse/platform-chrome-cros_ec_typec-Defer-probe-on-missing.patch
