platform/x86/intel: power-domains: Fix error code in tpmi_init() (jsc#PED-14188).

--- a/series.conf
+++ b/series.conf
@@ -10431,6 +10431,7 @@
 	patches.suse/Revert-mm-execmem-Unify-early-execmem_cache-behaviour.patch
 	patches.suse/platform-x86-ideapad-laptop-use-usleep_range-for-EC-.patch
 	patches.suse/platform-x86-intel-uncore-freq-Fail-module-load-when.patch
+	patches.suse/platform-x86-intel-power-domains-Fix-error-code-in-t.patch
 	patches.suse/platform-x86-amd-pmc-Clear-metrics-table-at-start-of.patch
 	patches.suse/platform-x86-amd-pmf-Use-device-managed-allocations.patch
 	patches.suse/platform-x86-amd-pmf-Prevent-amd_pmf_tee_deinit-from.patch
