--- a/series.conf
+++ b/series.conf
@@ -11169,6 +11169,7 @@
 	patches.suse/platform-x86-intel-tpmi-Get-OOBMSM-CPU-mapping-from-.patch
 	patches.suse/platform-x86-intel-pmt-discovery-Get-telemetry-attri.patch
 	patches.suse/platform-x86-intel-pmt-telemetry-Add-API-to-retrieve.patch
+	patches.suse/platform-x86-intel-pmt-KUNIT-test-for-PMT-Enhanced-D.patch
 	patches.suse/platform-x86-amd-pmc-Add-Lenovo-Yoga-6-13ALC6-to-pmc.patch
 	patches.suse/platform-x86-intel-pmt-fix-a-crashlog-NULL-pointer-a.patch
 	patches.suse/platform-chrome-cros_ec_typec-Defer-probe-on-missing.patch
