--- a/series.conf
+++ b/series.conf
@@ -4695,6 +4695,7 @@
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-interrupt-handle.patch
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-SPI-config-inter.patch
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-I2C-config-inter.patch
+	patches.suse/HID-intel-thc-hid-intel-quickspi-Add-THC-QuickSPI-dr.patch
 	patches.suse/HID-Wacom-Add-PCI-Wacom-device-support.patch
 	patches.suse/Input-xpad-add-support-for-Nacon-Pro-Compact.patch
 	patches.suse/Input-bbnsm_pwrkey-add-remove-hook.patch
