--- a/series.conf
+++ b/series.conf
@@ -4701,6 +4701,7 @@
 	patches.suse/HID-intel-thc-hid-intel-quickspi-Add-HIDSPI-protocol.patch
 	patches.suse/HID-intel-thc-hid-intel-quickspi-Complete-THC-QuickS.patch
 	patches.suse/HID-intel-thc-hid-intel-quickspi-Add-PM-implementati.patch
+	patches.suse/HID-intel-thc-hid-intel-quicki2c-Add-THC-QuickI2C-dr.patch
 	patches.suse/HID-Wacom-Add-PCI-Wacom-device-support.patch
 	patches.suse/Input-xpad-add-support-for-Nacon-Pro-Compact.patch
 	patches.suse/Input-bbnsm_pwrkey-add-remove-hook.patch
