--- a/series.conf
+++ b/series.conf
@@ -9762,6 +9762,7 @@
 	patches.suse/msft-hv-3280-net-mana-Add-support-for-Multi-Vports-on-Bare-metal.patch
 	patches.suse/vsock-virtio-fix-rx_bytes-accounting-for-stream-sock.patch
 	patches.suse/net-mlx5_core-Add-error-handling-inmlx5_query_nic_vp.patch
+	patches.suse/net-xilinx-axienet-Fix-Tx-skb-circular-buffer-occupa.patch
 	patches.suse/net-phy-clear-phydev-devlink-when-the-link-is-delete.patch
 	patches.suse/net-mlx5-Add-error-handling-in-mlx5_query_nic_vport_.patch
 	patches.suse/net-phy-mscc-Fix-memory-leak-when-using-one-step-tim.patch
