net: xilinx: axienet: Fix RX skb ring management in DMAengine mode (bsc#1250746)

--- a/series.conf
+++ b/series.conf
@@ -11952,6 +11952,7 @@
 	patches.suse/pidfs-Fix-memory-leak-in-pidfd_info.patch
 	patches.suse/fs-buffer-fix-use-after-free-when-call-bh_read-helpe.patch
 	patches.suse/use-uniform-permission-checks-for-all-mount-propagat.patch
+	patches.suse/net-xilinx-axienet-Fix-RX-skb-ring-management-in-DMA.patch
 	patches.suse/net-bridge-fix-soft-lockup-in-br_multicast_query_expired.patch
 	patches.suse/net-sched-Fix-backlog-accounting-in-qdisc_dequeue_in.patch
 	patches.suse/Bluetooth-hci_sync-Avoid-adding-default-advertising-.patch
