PM: sleep: Avoid unnecessary checks in device_prepare_smart_suspend() (jsc#PED-13973).

--- a/series.conf
+++ b/series.conf
@@ -7028,6 +7028,7 @@
 	patches.suse/PM-Block-enabling-of-runtime-PM-during-system-suspen.patch
 	patches.suse/PM-runtime-Introduce-pm_runtime_blocked.patch
 	patches.suse/PM-sleep-Use-DPM_FLAG_SMART_SUSPEND-conditionally.patch
+	patches.suse/PM-sleep-Avoid-unnecessary-checks-in-device_prepare_.patch
 	patches.suse/PM-hibernate-Avoid-deadlock-in-hibernate_compressor_.patch
 	patches.suse/PM-sleep-Adjust-check-before-setting-power.must_resu.patch
 	patches.suse/PM-sleep-Rename-power.async_in_progress-to-power.wor.patch
