--- a/series.conf
+++ b/series.conf
@@ -7025,6 +7025,7 @@
 	patches.suse/cpuidle-menu-Eliminate-outliers-on-both-ends-of-the-sample-set.patch
 	patches.suse/cpuidle-menu-Update-documentation-after-get_typical_interval-changes.patch
 	patches.suse/PM-EM-use-kfree_rcu-to-simplify-the-code.patch
+	patches.suse/PM-runtime-Drop-status-check-from-pm_runtime_force_r.patch
 	patches.suse/PM-Block-enabling-of-runtime-PM-during-system-suspen.patch
 	patches.suse/PM-runtime-Introduce-pm_runtime_blocked.patch
 	patches.suse/PM-sleep-Use-DPM_FLAG_SMART_SUSPEND-conditionally.patch
