riscv: stacktrace: Disable KASAN checks for non-current tasks (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12060,6 +12060,7 @@
 	patches.kernel.org/6.12.58-501-Revert-wifi-ath10k-avoid-unnecessary-wait-for.patch
 	patches.kernel.org/6.12.58-502-ring-buffer-Do-not-warn-in-ring_buffer_map_ge.patch
 	patches.kernel.org/6.12.58-503-net-libwx-fix-device-bus-LAN-ID.patch
+	patches.kernel.org/6.12.58-504-riscv-stacktrace-Disable-KASAN-checks-for-non.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
