--- a/series.conf
+++ b/series.conf
@@ -11568,6 +11568,7 @@
 	patches.kernel.org/6.12.58-009-Bluetooth-rfcomm-fix-modem-control-handling.patch
 	patches.kernel.org/6.12.58-010-wifi-brcmfmac-fix-crash-while-sending-Action-.patch
 	patches.kernel.org/6.12.58-011-fbdev-pvr2fb-Fix-leftover-reference-to-ONCHIP.patch
+	patches.kernel.org/6.12.58-012-fbdev-valkyriefb-Fix-reference-count-leak-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
