drm/amdkfd: fix vram allocation failure for a special case (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11810,6 +11810,7 @@
 	patches.kernel.org/6.12.58-251-net-phy-fixed_phy-let-fixed_phy_unregister-fr.patch
 	patches.kernel.org/6.12.58-252-fuse-zero-initialize-inode-private-data.patch
 	patches.kernel.org/6.12.58-253-drm-amdgpu-Correct-the-counts-of-nr_banks-and.patch
+	patches.kernel.org/6.12.58-254-drm-amdkfd-fix-vram-allocation-failure-for-a-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
