--- a/series.conf
+++ b/series.conf
@@ -11756,6 +11756,7 @@
 	patches.kernel.org/6.12.58-197-drm-tidss-Use-the-crtc_-timings-when-programm.patch
 	patches.kernel.org/6.12.58-198-drm-bridge-cdns-dsi-Fix-REG_WAKEUP_TIME-value.patch
 	patches.kernel.org/6.12.58-199-drm-bridge-cdns-dsi-Don-t-fail-on-MIPI_DSI_MO.patch
+	patches.kernel.org/6.12.58-200-drm-tidss-Set-crtc-modesetting-parameters-wit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
