pmdomain: apple: Add "apple,t8103-pmgr-pwrstate" (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11696,6 +11696,7 @@
 	patches.kernel.org/6.12.58-137-i3c-mipi-i3c-hci-pci-Add-support-for-Intel-Wi.patch
 	patches.kernel.org/6.12.58-138-video-backlight-lp855x_bl-Set-correct-EPROM-s.patch
 	patches.kernel.org/6.12.58-139-tools-cpupower-fix-error-return-value-in-cpup.patch
+	patches.kernel.org/6.12.58-140-pmdomain-apple-Add-apple-t8103-pmgr-pwrstate.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
