PCI: imx6: Enable the Vaux supply if available (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11852,6 +11852,7 @@
 	patches.kernel.org/6.12.58-293-media-verisilicon-Explicitly-disable-selectio.patch
 	patches.kernel.org/6.12.58-294-wifi-mac80211-Fix-6-GHz-Band-capabilities-ele.patch
 	patches.kernel.org/6.12.58-295-ALSA-usb-audio-apply-quirk-for-MOONDROP-Quark.patch
+	patches.kernel.org/6.12.58-296-PCI-imx6-Enable-the-Vaux-supply-if-available.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
