--- a/series.conf
+++ b/series.conf
@@ -11684,6 +11684,7 @@
 	patches.kernel.org/6.12.58-125-soc-tegra-fuse-Add-Tegra114-nvmem-cells-and-f.patch
 	patches.kernel.org/6.12.58-126-ARM-tegra-p880-set-correct-touchscreen-clippi.patch
 	patches.kernel.org/6.12.58-127-ARM-tegra-transformer-20-add-missing-magnetom.patch
+	patches.kernel.org/6.12.58-128-ARM-tegra-transformer-20-fix-audio-codec-inte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
