ACPI: SPCR: Check for table version when using precise baudrate (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12114,6 +12114,7 @@
 	patches.kernel.org/6.12.58-555-scsi-ufs-core-Add-a-quirk-to-suppress-link_st.patch
 	patches.kernel.org/6.12.58-556-drm-amd-display-update-color-on-atomic-commit.patch
 	patches.kernel.org/6.12.58-557-extcon-adc-jack-Cleanup-wakeup-source-only-if.patch
+	patches.kernel.org/6.12.58-558-ACPI-SPCR-Check-for-table-version-when-using-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
