--- a/series.conf
+++ b/series.conf
@@ -12019,6 +12019,7 @@
 	patches.kernel.org/6.12.58-460-clk-qcom-gcc-ipq6018-rework-nss_port5-clock-t.patch
 	patches.kernel.org/6.12.58-461-fs-hpfs-Fix-error-code-for-new_inode-failure-.patch
 	patches.kernel.org/6.12.58-462-um-Fix-help-message-for-ssl-non-raw.patch
+	patches.kernel.org/6.12.58-463-clk-sunxi-ng-sun6i-rtc-Add-A523-specifics.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
