media: i2c: og01a1b: Specify monochrome media bus format instead of Bayer (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11872,6 +11872,7 @@
 	patches.kernel.org/6.12.58-313-PCI-endpoint-pci-epf-test-Limit-PCIe-BAR-size.patch
 	patches.kernel.org/6.12.58-314-wifi-iwlwifi-fw-Add-ASUS-to-PPAG-and-TAS-list.patch
 	patches.kernel.org/6.12.58-315-media-ov08x40-Fix-the-horizontal-flip-control.patch
+	patches.kernel.org/6.12.58-316-media-i2c-og01a1b-Specify-monochrome-media-bu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
