usb: xhci: plat: Facilitate using autosuspend for xhci plat devices (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11935,6 +11935,7 @@
 	patches.kernel.org/6.12.58-376-scsi-lpfc-Ensure-PLOGI_ACC-is-sent-prior-to-P.patch
 	patches.kernel.org/6.12.58-377-allow-finish_no_open-file-ERR_PTR-E.patch
 	patches.kernel.org/6.12.58-378-usb-mon-Increase-BUFF_MAX-to-64-MiB-to-suppor.patch
+	patches.kernel.org/6.12.58-379-usb-xhci-plat-Facilitate-using-autosuspend-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
