--- a/series.conf
+++ b/series.conf
@@ -11624,6 +11624,7 @@
 	patches.kernel.org/6.12.58-065-drm-xe-Do-not-wake-device-during-a-GT-reset.patch
 	patches.kernel.org/6.12.58-066-drm-sysfb-Do-not-dereference-NULL-pointer-in-.patch
 	patches.kernel.org/6.12.58-067-drm-sched-avoid-killing-parent-entity-on-chil.patch
+	patches.kernel.org/6.12.58-068-drm-nouveau-Fix-race-in-nouveau_sched_fini.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
