--- a/series.conf
+++ b/series.conf
@@ -11891,6 +11891,7 @@
 	patches.kernel.org/6.12.58-332-net-sh_eth-Disable-WoL-if-system-can-not-susp.patch
 	patches.kernel.org/6.12.58-333-selftests-net-replace-sleeps-in-fcnal-test-wi.patch
 	patches.kernel.org/6.12.58-334-media-redrat3-use-int-type-to-store-negative-.patch
+	patches.kernel.org/6.12.58-335-selftests-traceroute-Use-require_command.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
