--- a/series.conf
+++ b/series.conf
@@ -11966,6 +11966,7 @@
 	patches.kernel.org/6.12.58-407-remoteproc-qcom-q6v5-Avoid-handling-handover-.patch
 	patches.kernel.org/6.12.58-408-wifi-ath12k-Increase-DP_REO_CMD_RING_SIZE-to-.patch
 	patches.kernel.org/6.12.58-409-net-dsa-microchip-Set-SPI-as-bus-interface-du.patch
+	patches.kernel.org/6.12.58-410-drm-amd-display-Add-AVI-infoframe-copy-in-cop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
