--- a/series.conf
+++ b/series.conf
@@ -11871,6 +11871,7 @@
 	patches.kernel.org/6.12.58-312-char-Use-list_del_init-in-misc_deregister-to-.patch
 	patches.kernel.org/6.12.58-313-PCI-endpoint-pci-epf-test-Limit-PCIe-BAR-size.patch
 	patches.kernel.org/6.12.58-314-wifi-iwlwifi-fw-Add-ASUS-to-PPAG-and-TAS-list.patch
+	patches.kernel.org/6.12.58-315-media-ov08x40-Fix-the-horizontal-flip-control.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
