sfc: fix potential memory leak in efx_mae_process_mport() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11607,6 +11607,7 @@
 	patches.kernel.org/6.12.58-048-drm-etnaviv-fix-flush-sequence-logic.patch
 	patches.kernel.org/6.12.58-049-tools-ynl-fix-string-attribute-length-to-incl.patch
 	patches.kernel.org/6.12.58-050-net-hns3-return-error-code-when-function-fail.patch
+	patches.kernel.org/6.12.58-051-sfc-fix-potential-memory-leak-in-efx_mae_proc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
