arc: Fix __fls() const-foldability via __builtin_clzl() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11661,6 +11661,7 @@
 	patches.kernel.org/6.12.58-102-libbpf-Fix-USDT-SIB-argument-handling-causing.patch
 	patches.kernel.org/6.12.58-103-selftests-bpf-Fix-bpf_prog_detach2-usage-in-t.patch
 	patches.kernel.org/6.12.58-104-cpufreq-longhaul-handle-NULL-policy-in-longha.patch
+	patches.kernel.org/6.12.58-105-arc-Fix-__fls-const-foldability-via-__builtin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
