--- a/series.conf
+++ b/series.conf
@@ -12025,6 +12025,7 @@
 	patches.kernel.org/6.12.58-466-clk-at91-sam9x7-Add-peripheral-clock-id-for-p.patch
 	patches.kernel.org/6.12.58-467-clk-at91-clk-master-Add-check-for-divide-by-3.patch
 	patches.kernel.org/6.12.58-468-clk-at91-clk-sam9x60-pll-force-write-to-PLL_U.patch
+	patches.kernel.org/6.12.58-469-9p-trans_fd-p9_fd_request-kick-rx-thread-if-E.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
