scsi: ufs: host: mediatek: Fix invalid access in vccqx handling (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11771,6 +11771,7 @@
 	patches.kernel.org/6.12.58-212-scsi-ufs-host-mediatek-Fix-PWM-mode-switch-is.patch
 	patches.kernel.org/6.12.58-213-scsi-ufs-host-mediatek-Assign-power-mode-user.patch
 	patches.kernel.org/6.12.58-214-scsi-ufs-host-mediatek-Change-reset-sequence-.patch
+	patches.kernel.org/6.12.58-215-scsi-ufs-host-mediatek-Fix-invalid-access-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
