--- a/series.conf
+++ b/series.conf
@@ -11788,6 +11788,7 @@
 	patches.kernel.org/6.12.58-229-dm-error-mark-as-DM_TARGET_PASSES_INTEGRITY.patch
 	patches.kernel.org/6.12.58-230-char-misc-Make-misc_register-reentry-for-misc.patch
 	patches.kernel.org/6.12.58-231-char-misc-Does-not-request-module-for-miscdev.patch
+	patches.kernel.org/6.12.58-232-net-When-removing-nexthops-don-t-call-synchro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
