wifi: rtw89: fix BSSID comparison for non-transmitted BSSID (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11784,6 +11784,7 @@
 	patches.kernel.org/6.12.58-225-iio-adc-imx93_adc-load-calibrated-values-even.patch
 	patches.kernel.org/6.12.58-226-usb-gadget-f_ncm-Fix-MAC-assignment-NCM-ether.patch
 	patches.kernel.org/6.12.58-227-wifi-rtw89-wow-remove-notify-during-WoWLAN-ne.patch
+	patches.kernel.org/6.12.58-228-wifi-rtw89-fix-BSSID-comparison-for-non-trans.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
