--- a/series.conf
+++ b/series.conf
@@ -11983,6 +11983,7 @@
 	patches.kernel.org/6.12.58-424-fs-ext4-change-GFP_KERNEL-to-GFP_NOFS-to-avoi.patch
 	patches.kernel.org/6.12.58-425-ext4-increase-IO-priority-of-fastcommit.patch
 	patches.kernel.org/6.12.58-426-amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_de.patch
+	patches.kernel.org/6.12.58-427-ASoC-stm32-sai-manage-context-in-set_sysclk-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
