net: dsa: microchip: Set SPI as bus interface during reset for KSZ8463 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11965,6 +11965,7 @@
 	patches.kernel.org/6.12.58-406-selftests-forwarding-Reorder-ar-ping-argument.patch
 	patches.kernel.org/6.12.58-407-remoteproc-qcom-q6v5-Avoid-handling-handover-.patch
 	patches.kernel.org/6.12.58-408-wifi-ath12k-Increase-DP_REO_CMD_RING_SIZE-to-.patch
+	patches.kernel.org/6.12.58-409-net-dsa-microchip-Set-SPI-as-bus-interface-du.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
