--- a/series.conf
+++ b/series.conf
@@ -12093,6 +12093,7 @@
 	patches.kernel.org/6.12.58-534-net-wan-framer-pef2256-Switch-to-devm_mfd_add.patch
 	patches.kernel.org/6.12.58-535-net-dsa-microchip-Fix-reserved-multicast-addr.patch
 	patches.kernel.org/6.12.58-536-lan966x-Fix-sleeping-in-atomic-context.patch
+	patches.kernel.org/6.12.58-537-net-bridge-fix-use-after-free-due-to-MST-port.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
