ACPI: fan: Use ACPI handle when retrieving _FST (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11615,6 +11615,7 @@
 	patches.kernel.org/6.12.58-056-drm-amd-pm-fix-smu-table-id-bound-check-issue.patch
 	patches.kernel.org/6.12.58-057-drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkL.patch
 	patches.kernel.org/6.12.58-058-drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkL.patch
+	patches.kernel.org/6.12.58-059-ACPI-fan-Use-ACPI-handle-when-retrieving-_FST.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
