smsc911x: add second read of EEPROM mac when possible corruption seen (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11855,6 +11855,7 @@
 	patches.kernel.org/6.12.58-296-PCI-imx6-Enable-the-Vaux-supply-if-available.patch
 	patches.kernel.org/6.12.58-297-drm-xe-guc-Set-upper-limit-of-H2G-retries-ove.patch
 	patches.kernel.org/6.12.58-298-net-call-cond_resched-less-often-in-__release.patch
+	patches.kernel.org/6.12.58-299-smsc911x-add-second-read-of-EEPROM-mac-when-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
