mips: lantiq: xway: sysctrl: rename stp clock (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11825,6 +11825,7 @@
 	patches.kernel.org/6.12.58-266-mips-lantiq-danube-add-missing-properties-to-.patch
 	patches.kernel.org/6.12.58-267-mips-lantiq-danube-add-model-to-EASY50712-dts.patch
 	patches.kernel.org/6.12.58-268-mips-lantiq-danube-add-missing-device_type-in.patch
+	patches.kernel.org/6.12.58-269-mips-lantiq-xway-sysctrl-rename-stp-clock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
