--- a/series.conf
+++ b/series.conf
@@ -11915,6 +11915,7 @@
 	patches.kernel.org/6.12.58-356-wifi-mt76-mt7996-fix-memory-leak-on-mt7996_mc.patch
 	patches.kernel.org/6.12.58-357-drm-amdgpu-Use-memdup_array_user-in-amdgpu_cs.patch
 	patches.kernel.org/6.12.58-358-drm-amd-display-Set-up-pixel-encoding-for-YCB.patch
+	patches.kernel.org/6.12.58-359-drm-amd-display-fix-dml-ms-order-of-operation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
