--- a/series.conf
+++ b/series.conf
@@ -11977,6 +11977,7 @@
 	patches.kernel.org/6.12.58-418-scsi-libfc-Fix-potential-buffer-overflow-in-f.patch
 	patches.kernel.org/6.12.58-419-accel-habanalabs-gaudi2-fix-BMON-disable-conf.patch
 	patches.kernel.org/6.12.58-420-scsi-mpt3sas-Add-support-for-22.5-Gbps-SAS-li.patch
+	patches.kernel.org/6.12.58-421-accel-habanalabs-return-ENOMEM-if-less-than-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
