--- a/series.conf
+++ b/series.conf
@@ -11800,6 +11800,7 @@
 	patches.kernel.org/6.12.58-241-rds-Fix-endianness-annotation-for-RDS_MPATH_H.patch
 	patches.kernel.org/6.12.58-242-net-wangxun-limit-tx_max_coalesced_frames_irq.patch
 	patches.kernel.org/6.12.58-243-media-ipu6-isys-Set-embedded-data-type-correc.patch
+	patches.kernel.org/6.12.58-244-rpmsg-char-Export-alias-for-RPMSG-ID-rpmsg-ra.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
