Bluetooth: MGMT: Fix OOB access in parse_adv_monitor_pattern() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12098,6 +12098,7 @@
 	patches.kernel.org/6.12.58-539-tracing-Fix-memory-leaks-in-create_field_var.patch
 	patches.kernel.org/6.12.58-540-drm-amd-display-Enable-mst-when-it-s-detected.patch
 	patches.kernel.org/6.12.58-541-drm-sched-Fix-deadlock-in-drm_sched_entity_ki.patch
+	patches.kernel.org/6.12.58-542-Bluetooth-MGMT-Fix-OOB-access-in-parse_adv_mo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
