--- a/series.conf
+++ b/series.conf
@@ -11570,6 +11570,7 @@
 	patches.kernel.org/6.12.58-011-fbdev-pvr2fb-Fix-leftover-reference-to-ONCHIP.patch
 	patches.kernel.org/6.12.58-012-fbdev-valkyriefb-Fix-reference-count-leak-in-.patch
 	patches.kernel.org/6.12.58-013-mptcp-drop-bogus-optimization-in-__mptcp_chec.patch
+	patches.kernel.org/6.12.58-014-mptcp-restore-window-probe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
