hwmon: sy7636a: add alias (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11676,6 +11676,7 @@
 	patches.kernel.org/6.12.58-117-hwmon-sbtsi_temp-AMD-CPU-extended-temperature.patch
 	patches.kernel.org/6.12.58-118-pinctrl-keembay-release-allocated-memory-in-d.patch
 	patches.kernel.org/6.12.58-119-power-supply-sbs-charger-Support-multiple-dev.patch
+	patches.kernel.org/6.12.58-120-hwmon-sy7636a-add-alias.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
