net: ionic: add dma_wmb() before ringing TX doorbell (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12079,6 +12079,7 @@
 	patches.kernel.org/6.12.58-520-sctp-Hold-RCU-read-lock-while-iterating-over-.patch
 	patches.kernel.org/6.12.58-521-sctp-Prevent-TOCTOU-out-of-bounds-write.patch
 	patches.kernel.org/6.12.58-522-sctp-Hold-sock-lock-while-iterating-over-addr.patch
+	patches.kernel.org/6.12.58-523-net-ionic-add-dma_wmb-before-ringing-TX-doorb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
