--- a/series.conf
+++ b/series.conf
@@ -11919,6 +11919,7 @@
 	patches.kernel.org/6.12.58-360-drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.kernel.org/6.12.58-361-drm-amd-display-Fix-DVI-D-HDMI-adapters.patch
 	patches.kernel.org/6.12.58-362-drm-amd-display-Disable-VRR-on-DCE-6.patch
+	patches.kernel.org/6.12.58-363-drm-amd-display-dml2-Guard-dml21_map_dc_state.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
