drm/msm/dsi/phy: Toggle back buffer resync after preparing PLL (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11837,6 +11837,7 @@
 	patches.kernel.org/6.12.58-278-dmaengine-sh-setup_xref-error-handling.patch
 	patches.kernel.org/6.12.58-279-dmaengine-mv_xor-match-alloc_wc-and-free_wc.patch
 	patches.kernel.org/6.12.58-280-dmaengine-dw-edma-Set-status-for-callback_res.patch
+	patches.kernel.org/6.12.58-281-drm-msm-dsi-phy-Toggle-back-buffer-resync-aft.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
