--- a/series.conf
+++ b/series.conf
@@ -11933,6 +11933,7 @@
 	patches.kernel.org/6.12.58-374-scsi-lpfc-Remove-ndlp-kref-decrement-clause-f.patch
 	patches.kernel.org/6.12.58-375-scsi-lpfc-Define-size-of-debugfs-entry-for-xr.patch
 	patches.kernel.org/6.12.58-376-scsi-lpfc-Ensure-PLOGI_ACC-is-sent-prior-to-P.patch
+	patches.kernel.org/6.12.58-377-allow-finish_no_open-file-ERR_PTR-E.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
