jfs: fix uninitialized waitqueue in transaction manager (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11944,6 +11944,7 @@
 	patches.kernel.org/6.12.58-385-RDMA-irdma-Update-Kconfig.patch
 	patches.kernel.org/6.12.58-386-IB-ipoib-Ignore-L3-master-device.patch
 	patches.kernel.org/6.12.58-387-jfs-Verify-inode-mode-when-loading-from-disk.patch
+	patches.kernel.org/6.12.58-388-jfs-fix-uninitialized-waitqueue-in-transactio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
