--- a/series.conf
+++ b/series.conf
@@ -11651,6 +11651,7 @@
 	patches.kernel.org/6.12.58-092-pinctrl-single-fix-bias-pull-up-down-handling.patch
 	patches.kernel.org/6.12.58-093-mmc-host-renesas_sdhi-Fix-the-actual-clock.patch
 	patches.kernel.org/6.12.58-094-memstick-Add-timeout-to-prevent-indefinite-wa.patch
+	patches.kernel.org/6.12.58-095-cpufreq-ti-Add-support-for-AM62D2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
