bpf: Sync pending IRQ work before freeing ring buffer (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11586,6 +11586,7 @@
 	patches.kernel.org/6.12.58-027-wifi-mac80211-don-t-mark-keys-for-inactive-li.patch
 	patches.kernel.org/6.12.58-028-wifi-mac80211-fix-key-tailroom-accounting-lea.patch
 	patches.kernel.org/6.12.58-029-kunit-test_dev_action-Correctly-cast-priv-poi.patch
+	patches.kernel.org/6.12.58-030-bpf-Sync-pending-IRQ-work-before-freeing-ring.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
