--- a/series.conf
+++ b/series.conf
@@ -11734,6 +11734,7 @@
 	patches.kernel.org/6.12.58-175-drm-xe-guc-Add-more-GuC-load-error-status-cod.patch
 	patches.kernel.org/6.12.58-176-drm-xe-Fix-oops-in-xe_gem_fault-when-running-.patch
 	patches.kernel.org/6.12.58-177-drm-amdgpu-Avoid-rma-causes-GPU-duplicate-res.patch
+	patches.kernel.org/6.12.58-178-drm-amd-amdgpu-Release-xcp-drm-memory-after-u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
