drm: panel-backlight-quirks: Make EDID match optional (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11844,6 +11844,7 @@
 	patches.kernel.org/6.12.58-285-selftests-drv-net-rss_ctx-make-the-test-pass-.patch
 	patches.kernel.org/6.12.58-286-ipv6-Add-sanity-checks-on-ipv6_devconf.rpl_se.patch
 	patches.kernel.org/6.12.58-287-drm-panthor-check-bo-offset-alignment-in-vm-b.patch
+	patches.kernel.org/6.12.58-288-drm-panel-backlight-quirks-Make-EDID-match-op.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
