--- a/series.conf
+++ b/series.conf
@@ -12067,6 +12067,7 @@
 	patches.kernel.org/6.12.58-508-net-dsa-tag_brcm-legacy-reorganize-functions.patch
 	patches.kernel.org/6.12.58-509-net-dsa-tag_brcm-legacy-fix-untagged-rx-on-un.patch
 	patches.kernel.org/6.12.58-510-selftests-net-fix-out-of-order-delivery-of-FI.patch
+	patches.kernel.org/6.12.58-511-selftests-net-use-destination-options-instead.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
