--- a/series.conf
+++ b/series.conf
@@ -12069,6 +12069,7 @@
 	patches.kernel.org/6.12.58-510-selftests-net-fix-out-of-order-delivery-of-FI.patch
 	patches.kernel.org/6.12.58-511-selftests-net-use-destination-options-instead.patch
 	patches.kernel.org/6.12.58-512-selftests-netdevsim-Fix-ethtool-coalesce.sh-f.patch
+	patches.kernel.org/6.12.58-513-net-vlan-sync-VLAN-features-with-lower-device.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
