selftests/net: Replace non-standard __WORDSIZE with sizeof(long) * 8 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11746,6 +11746,7 @@
 	patches.kernel.org/6.12.58-187-drm-amd-display-Reset-apply_eamless_boot_opti.patch
 	patches.kernel.org/6.12.58-188-drm-amd-display-Wait-until-OTG-enable-state-i.patch
 	patches.kernel.org/6.12.58-189-PCI-Disable-MSI-on-RDC-PCI-to-PCIe-bridges.patch
+	patches.kernel.org/6.12.58-190-selftests-net-Replace-non-standard-__WORDSIZE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
