bnxt_en: Fix a possible memory leak in bnxt_ptp_init (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12082,6 +12082,7 @@
 	patches.kernel.org/6.12.58-523-net-ionic-add-dma_wmb-before-ringing-TX-doorb.patch
 	patches.kernel.org/6.12.58-524-net-ionic-map-SKB-after-pseudo-header-checksu.patch
 	patches.kernel.org/6.12.58-525-net-usb-qmi_wwan-initialize-MAC-header-offset.patch
+	patches.kernel.org/6.12.58-526-bnxt_en-Fix-a-possible-memory-leak-in-bnxt_pt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
