--- a/series.conf
+++ b/series.conf
@@ -11978,6 +11978,7 @@
 	patches.kernel.org/6.12.58-419-accel-habanalabs-gaudi2-fix-BMON-disable-conf.patch
 	patches.kernel.org/6.12.58-420-scsi-mpt3sas-Add-support-for-22.5-Gbps-SAS-li.patch
 	patches.kernel.org/6.12.58-421-accel-habanalabs-return-ENOMEM-if-less-than-r.patch
+	patches.kernel.org/6.12.58-422-accel-habanalabs-gaudi2-read-preboot-status-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
