wifi: rtw89: renew a completion for each H2C command waiting C2H event (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11938,6 +11938,7 @@
 	patches.kernel.org/6.12.58-379-usb-xhci-plat-Facilitate-using-autosuspend-fo.patch
 	patches.kernel.org/6.12.58-380-f2fs-fix-infinite-loop-in-__insert_extent_tre.patch
 	patches.kernel.org/6.12.58-381-wifi-rtw89-obtain-RX-path-from-ppdu-status-IE.patch
+	patches.kernel.org/6.12.58-382-wifi-rtw89-renew-a-completion-for-each-H2C-co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
