ice: Don't use %pK through printk or tracepoints (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11761,6 +11761,7 @@
 	patches.kernel.org/6.12.58-202-PCI-ERR-Update-device-error_state-already-aft.patch
 	patches.kernel.org/6.12.58-203-x86-vsyscall-Do-not-require-X86_PF_INSTR-to-e.patch
 	patches.kernel.org/6.12.58-204-net-stmmac-Check-stmmac_hw_setup-in-stmmac_re.patch
+	patches.kernel.org/6.12.58-205-ice-Don-t-use-pK-through-printk-or-tracepoint.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
