--- a/series.conf
+++ b/series.conf
@@ -12113,6 +12113,7 @@
 	patches.kernel.org/6.12.58-554-scsi-ufs-ufs-pci-Set-UFSHCD_QUIRK_PERFORM_LIN.patch
 	patches.kernel.org/6.12.58-555-scsi-ufs-core-Add-a-quirk-to-suppress-link_st.patch
 	patches.kernel.org/6.12.58-556-drm-amd-display-update-color-on-atomic-commit.patch
+	patches.kernel.org/6.12.58-557-extcon-adc-jack-Cleanup-wakeup-source-only-if.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
