--- a/series.conf
+++ b/series.conf
@@ -11672,6 +11672,7 @@
 	patches.kernel.org/6.12.58-113-power-supply-qcom_battmgr-add-OOI-chemistry.patch
 	patches.kernel.org/6.12.58-114-hwmon-k10temp-Add-thermal-support-for-AMD-Fam.patch
 	patches.kernel.org/6.12.58-115-hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
+	patches.kernel.org/6.12.58-116-hwmon-lenovo-ec-sensors-Update-P8-supprt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
