--- a/series.conf
+++ b/series.conf
@@ -11867,6 +11867,7 @@
 	patches.kernel.org/6.12.58-308-usb-gadget-f_hid-Fix-zero-length-packet-trans.patch
 	patches.kernel.org/6.12.58-309-usb-cdns3-gadget-Use-after-free-during-failed.patch
 	patches.kernel.org/6.12.58-310-tty-vt-Add-missing-return-value-for-VT_RESIZE.patch
+	patches.kernel.org/6.12.58-311-drm-msm-make-sure-to-not-queue-up-recovery-mo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
