scsi: pm8001: Use int instead of u32 to store error codes (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11831,6 +11831,7 @@
 	patches.kernel.org/6.12.58-272-microchip-lan865x-add-ndo_eth_ioctl-handler-t.patch
 	patches.kernel.org/6.12.58-273-tcp-use-dst_dev_rcu-in-tcp_fastopen_active_di.patch
 	patches.kernel.org/6.12.58-274-crypto-qat-use-kcalloc-in-qat_uclo_map_objs_f.patch
+	patches.kernel.org/6.12.58-275-scsi-pm8001-Use-int-instead-of-u32-to-store-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
