clk: clocking-wizard: Fix output clock register offset for Versal platforms (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12028,6 +12028,7 @@
 	patches.kernel.org/6.12.58-469-9p-trans_fd-p9_fd_request-kick-rx-thread-if-E.patch
 	patches.kernel.org/6.12.58-470-clk-ti-am33xx-keep-WKUP_DEBUGSS_CLKCTRL-enabl.patch
 	patches.kernel.org/6.12.58-471-clk-scmi-Add-duty-cycle-ops-only-when-duty-cy.patch
+	patches.kernel.org/6.12.58-472-clk-clocking-wizard-Fix-output-clock-register.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
