--- a/series.conf
+++ b/series.conf
@@ -12003,6 +12003,7 @@
 	patches.kernel.org/6.12.58-444-ftrace-Fix-softlockup-in-ftrace_module_enable.patch
 	patches.kernel.org/6.12.58-445-ksmbd-use-sock_create_kern-interface-to-creat.patch
 	patches.kernel.org/6.12.58-446-smb-client-transport-avoid-reconnects-trigger.patch
+	patches.kernel.org/6.12.58-447-ima-don-t-clear-IMA_DIGSIG-flag-when-setting-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
