--- a/series.conf
+++ b/series.conf
@@ -11716,6 +11716,7 @@
 	patches.kernel.org/6.12.58-157-hwmon-dell-smm-Remove-Dell-Precision-490-cust.patch
 	patches.kernel.org/6.12.58-158-tools-cpupower-Fix-incorrect-size-in-cpuidle_.patch
 	patches.kernel.org/6.12.58-159-selftests-bpf-Fix-flaky-bpf_cookie-selftest.patch
+	patches.kernel.org/6.12.58-160-tools-power-x86_energy_perf_policy-Fix-incorr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
