ksmbd: use sock_create_kern interface to create kernel socket (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12001,6 +12001,7 @@
 	patches.kernel.org/6.12.58-442-page_pool-Clamp-pool-size-to-max-16K-pages.patch
 	patches.kernel.org/6.12.58-443-orangefs-fix-xattr-related-buffer-overflow.patch
 	patches.kernel.org/6.12.58-444-ftrace-Fix-softlockup-in-ftrace_module_enable.patch
+	patches.kernel.org/6.12.58-445-ksmbd-use-sock_create_kern-interface-to-creat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
