net: dsa: microchip: Fix reserved multicast address table programming (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12091,6 +12091,7 @@
 	patches.kernel.org/6.12.58-532-net-ti-icssg-prueth-Fix-fdb-hash-size-configu.patch
 	patches.kernel.org/6.12.58-533-net-mlx5e-SHAMPO-Fix-skb-size-check-for-64K-p.patch
 	patches.kernel.org/6.12.58-534-net-wan-framer-pef2256-Switch-to-devm_mfd_add.patch
+	patches.kernel.org/6.12.58-535-net-dsa-microchip-Fix-reserved-multicast-addr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
