libbpf: Fix USDT SIB argument handling causing unrecognized register error (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11658,6 +11658,7 @@
 	patches.kernel.org/6.12.58-099-io_uring-zctx-check-chained-notif-contexts.patch
 	patches.kernel.org/6.12.58-100-ACPI-sysfs-Use-ACPI_FREE-for-freeing-an-ACPI-.patch
 	patches.kernel.org/6.12.58-101-ACPI-video-force-native-for-Lenovo-82K8.patch
+	patches.kernel.org/6.12.58-102-libbpf-Fix-USDT-SIB-argument-handling-causing.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
