--- a/series.conf
+++ b/series.conf
@@ -11997,6 +11997,7 @@
 	patches.kernel.org/6.12.58-438-net-stmmac-est-Drop-frames-causing-HLBS-error.patch
 	patches.kernel.org/6.12.58-439-exfat-limit-log-print-for-IO-error.patch
 	patches.kernel.org/6.12.58-440-exfat-validate-cluster-allocation-bits-of-the.patch
+	patches.kernel.org/6.12.58-441-6pack-drop-redundant-locking-and-refcounting.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
