--- a/series.conf
+++ b/series.conf
@@ -12115,6 +12115,7 @@
 	patches.kernel.org/6.12.58-556-drm-amd-display-update-color-on-atomic-commit.patch
 	patches.kernel.org/6.12.58-557-extcon-adc-jack-Cleanup-wakeup-source-only-if.patch
 	patches.kernel.org/6.12.58-558-ACPI-SPCR-Check-for-table-version-when-using-.patch
+	patches.kernel.org/6.12.58-559-drm-amdgpu-Fix-unintended-error-log-in-VCN5_0.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
