clk: at91: clk-sam9x60-pll: force write to PLL_UPDT register (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12024,6 +12024,7 @@
 	patches.kernel.org/6.12.58-465-ARM-at91-pm-save-and-restore-ACR-during-PLL-d.patch
 	patches.kernel.org/6.12.58-466-clk-at91-sam9x7-Add-peripheral-clock-id-for-p.patch
 	patches.kernel.org/6.12.58-467-clk-at91-clk-master-Add-check-for-divide-by-3.patch
+	patches.kernel.org/6.12.58-468-clk-at91-clk-sam9x60-pll-force-write-to-PLL_U.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
