--- a/series.conf
+++ b/series.conf
@@ -11619,6 +11619,7 @@
 	patches.kernel.org/6.12.58-060-block-fix-op_is_zone_mgmt-to-handle-REQ_OP_ZO.patch
 	patches.kernel.org/6.12.58-061-block-make-REQ_OP_ZONE_OPEN-a-write-operation.patch
 	patches.kernel.org/6.12.58-062-perf-x86-intel-Fix-KASAN-global-out-of-bounds.patch
+	patches.kernel.org/6.12.58-063-regmap-slimbus-fix-bus_context-pointer-in-reg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
