ALSA: serial-generic: remove shared static buffer (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11911,6 +11911,7 @@
 	patches.kernel.org/6.12.58-352-wifi-mt76-mt7921-Add-160MHz-beamformee-capabi.patch
 	patches.kernel.org/6.12.58-353-wifi-mt76-mt7996-Temporarily-disable-EPCS.patch
 	patches.kernel.org/6.12.58-354-wifi-mt76-mt76_eeprom_override-to-int.patch
+	patches.kernel.org/6.12.58-355-ALSA-serial-generic-remove-shared-static-buff.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
