x86/kvm: Prefer native qspinlock for dedicated vCPUs irrespective of PV_UNHALT (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11895,6 +11895,7 @@
 	patches.kernel.org/6.12.58-336-selftests-traceroute-Return-correct-value-on-.patch
 	patches.kernel.org/6.12.58-337-openrisc-Add-R_OR1K_32_PCREL-relocation-type-.patch
 	patches.kernel.org/6.12.58-338-netfilter-nf_reject-don-t-reply-to-icmp-error.patch
+	patches.kernel.org/6.12.58-339-x86-kvm-Prefer-native-qspinlock-for-dedicated.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
