--- a/series.conf
+++ b/series.conf
@@ -11632,6 +11632,7 @@
 	patches.kernel.org/6.12.58-073-ACPI-fan-Add-fan-speed-reporting-for-fans-wit.patch
 	patches.kernel.org/6.12.58-074-ACPI-fan-Use-platform-device-for-devres-relat.patch
 	patches.kernel.org/6.12.58-075-sched_ext-Mark-scx_bpf_dsq_move_set_-slice-vt.patch
+	patches.kernel.org/6.12.58-076-cpuidle-governors-menu-Rearrange-main-loop-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
