drm/amd/display: Fix for test crash due to power gating (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11968,6 +11968,7 @@
 	patches.kernel.org/6.12.58-409-net-dsa-microchip-Set-SPI-as-bus-interface-du.patch
 	patches.kernel.org/6.12.58-410-drm-amd-display-Add-AVI-infoframe-copy-in-cop.patch
 	patches.kernel.org/6.12.58-411-drm-amd-display-Init-dispclk-from-bootup-cloc.patch
+	patches.kernel.org/6.12.58-412-drm-amd-display-Fix-for-test-crash-due-to-pow.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
