remoteproc: qcom: q6v5: Avoid handling handover twice (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11963,6 +11963,7 @@
 	patches.kernel.org/6.12.58-404-crypto-hisilicon-qm-clear-all-VF-configuratio.patch
 	patches.kernel.org/6.12.58-405-PCI-PM-Skip-resuming-to-D0-if-device-is-disco.patch
 	patches.kernel.org/6.12.58-406-selftests-forwarding-Reorder-ar-ping-argument.patch
+	patches.kernel.org/6.12.58-407-remoteproc-qcom-q6v5-Avoid-handling-handover-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
