--- a/series.conf
+++ b/series.conf
@@ -11900,6 +11900,7 @@
 	patches.kernel.org/6.12.58-341-eth-8139too-Make-8139TOO_PIO-depend-on-NO_IOP.patch
 	patches.kernel.org/6.12.58-342-selftests-Replace-sleep-with-slowwait.patch
 	patches.kernel.org/6.12.58-343-net-devmem-expose-tcp_recvmsg_locked-errors.patch
+	patches.kernel.org/6.12.58-344-udp_tunnel-use-netdev_warn-instead-of-netdev_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
