--- a/series.conf
+++ b/series.conf
@@ -11584,6 +11584,7 @@
 	patches.kernel.org/6.12.58-025-ALSA-usb-audio-fix-control-pipe-direction.patch
 	patches.kernel.org/6.12.58-026-ASoC-cs-amp-lib-test-Fix-missing-include-of-k.patch
 	patches.kernel.org/6.12.58-027-wifi-mac80211-don-t-mark-keys-for-inactive-li.patch
+	patches.kernel.org/6.12.58-028-wifi-mac80211-fix-key-tailroom-accounting-lea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
