--- a/series.conf
+++ b/series.conf
@@ -11899,6 +11899,7 @@
 	patches.kernel.org/6.12.58-340-selftests-Disable-dad-for-ipv6-in-fcnal-test..patch
 	patches.kernel.org/6.12.58-341-eth-8139too-Make-8139TOO_PIO-depend-on-NO_IOP.patch
 	patches.kernel.org/6.12.58-342-selftests-Replace-sleep-with-slowwait.patch
+	patches.kernel.org/6.12.58-343-net-devmem-expose-tcp_recvmsg_locked-errors.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
