--- a/series.conf
+++ b/series.conf
@@ -11612,6 +11612,7 @@
 	patches.kernel.org/6.12.58-053-ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
 	patches.kernel.org/6.12.58-054-drm-radeon-Do-not-kfree-devres-managed-rdev.patch
 	patches.kernel.org/6.12.58-055-drm-radeon-Remove-calls-to-drm_put_dev.patch
+	patches.kernel.org/6.12.58-056-drm-amd-pm-fix-smu-table-id-bound-check-issue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
