--- a/series.conf
+++ b/series.conf
@@ -11851,6 +11851,7 @@
 	patches.kernel.org/6.12.58-292-media-adv7180-Only-validate-format-in-queryst.patch
 	patches.kernel.org/6.12.58-293-media-verisilicon-Explicitly-disable-selectio.patch
 	patches.kernel.org/6.12.58-294-wifi-mac80211-Fix-6-GHz-Band-capabilities-ele.patch
+	patches.kernel.org/6.12.58-295-ALSA-usb-audio-apply-quirk-for-MOONDROP-Quark.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
