--- a/series.conf
+++ b/series.conf
@@ -11602,6 +11602,7 @@
 	patches.kernel.org/6.12.58-043-Bluetooth-ISO-Fix-BIS-connection-dst_type-han.patch
 	patches.kernel.org/6.12.58-044-Bluetooth-btmtksdio-Add-pmctrl-handling-for-B.patch
 	patches.kernel.org/6.12.58-045-Bluetooth-HCI-Fix-tracking-of-advertisement-s.patch
+	patches.kernel.org/6.12.58-046-Bluetooth-ISO-Fix-another-instance-of-dst_typ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
