--- a/series.conf
+++ b/series.conf
@@ -12072,6 +12072,7 @@
 	patches.kernel.org/6.12.58-513-net-vlan-sync-VLAN-features-with-lower-device.patch
 	patches.kernel.org/6.12.58-514-gpio-swnode-don-t-use-the-swnode-s-name-as-th.patch
 	patches.kernel.org/6.12.58-515-gpiolib-fix-invalid-pointer-access-in-debugfs.patch
+	patches.kernel.org/6.12.58-516-net-dsa-b53-fix-resetting-speed-and-pause-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
