--- a/series.conf
+++ b/series.conf
@@ -11940,6 +11940,7 @@
 	patches.kernel.org/6.12.58-381-wifi-rtw89-obtain-RX-path-from-ppdu-status-IE.patch
 	patches.kernel.org/6.12.58-382-wifi-rtw89-renew-a-completion-for-each-H2C-co.patch
 	patches.kernel.org/6.12.58-383-usb-xhci-pci-add-support-for-hosts-with-zero-.patch
+	patches.kernel.org/6.12.58-384-ipv6-np-rxpmtu-race-annotation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
