drm/xe/guc: Set upper limit of H2G retries over CTB (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11853,6 +11853,7 @@
 	patches.kernel.org/6.12.58-294-wifi-mac80211-Fix-6-GHz-Band-capabilities-ele.patch
 	patches.kernel.org/6.12.58-295-ALSA-usb-audio-apply-quirk-for-MOONDROP-Quark.patch
 	patches.kernel.org/6.12.58-296-PCI-imx6-Enable-the-Vaux-supply-if-available.patch
+	patches.kernel.org/6.12.58-297-drm-xe-guc-Set-upper-limit-of-H2G-retries-ove.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
