--- a/series.conf
+++ b/series.conf
@@ -11592,6 +11592,7 @@
 	patches.kernel.org/6.12.58-033-bpf-x86-Avoid-repeated-usage-of-bpf_prog-aux-.patch
 	patches.kernel.org/6.12.58-034-bpf-Do-not-audit-capability-check-in-do_jit.patch
 	patches.kernel.org/6.12.58-035-crypto-aspeed-fix-double-free-caused-by-devm.patch
+	patches.kernel.org/6.12.58-036-ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
