--- a/series.conf
+++ b/series.conf
@@ -12057,6 +12057,7 @@
 	patches.kernel.org/6.12.58-498-media-uvcvideo-Use-heuristic-to-find-stream-e.patch
 	patches.kernel.org/6.12.58-499-media-videobuf2-forbid-remove_bufs-when-legac.patch
 	patches.kernel.org/6.12.58-500-drm-mediatek-Disable-AFBC-support-on-Mediatek.patch
+	patches.kernel.org/6.12.58-501-Revert-wifi-ath10k-avoid-unnecessary-wait-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
