drm/radeon: Do not kfree() devres managed rdev (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11610,6 +11610,7 @@
 	patches.kernel.org/6.12.58-051-sfc-fix-potential-memory-leak-in-efx_mae_proc.patch
 	patches.kernel.org/6.12.58-052-dpll-spec-add-missing-module-name-and-clock-i.patch
 	patches.kernel.org/6.12.58-053-ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
+	patches.kernel.org/6.12.58-054-drm-radeon-Do-not-kfree-devres-managed-rdev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
