--- a/series.conf
+++ b/series.conf
@@ -11893,6 +11893,7 @@
 	patches.kernel.org/6.12.58-334-media-redrat3-use-int-type-to-store-negative-.patch
 	patches.kernel.org/6.12.58-335-selftests-traceroute-Use-require_command.patch
 	patches.kernel.org/6.12.58-336-selftests-traceroute-Return-correct-value-on-.patch
+	patches.kernel.org/6.12.58-337-openrisc-Add-R_OR1K_32_PCREL-relocation-type-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
