bpf: Do not audit capability check in do_jit() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11590,6 +11590,7 @@
 	patches.kernel.org/6.12.58-031-scsi-ufs-core-Initialize-value-of-an-attribut.patch
 	patches.kernel.org/6.12.58-032-bpf-Find-eligible-subprogs-for-private-stack-.patch
 	patches.kernel.org/6.12.58-033-bpf-x86-Avoid-repeated-usage-of-bpf_prog-aux-.patch
+	patches.kernel.org/6.12.58-034-bpf-Do-not-audit-capability-check-in-do_jit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
