--- a/series.conf
+++ b/series.conf
@@ -12004,6 +12004,7 @@
 	patches.kernel.org/6.12.58-445-ksmbd-use-sock_create_kern-interface-to-creat.patch
 	patches.kernel.org/6.12.58-446-smb-client-transport-avoid-reconnects-trigger.patch
 	patches.kernel.org/6.12.58-447-ima-don-t-clear-IMA_DIGSIG-flag-when-setting-.patch
+	patches.kernel.org/6.12.58-448-usb-xhci-pci-Fix-USB2-only-root-hub-registrat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
