--- a/series.conf
+++ b/series.conf
@@ -11862,6 +11862,7 @@
 	patches.kernel.org/6.12.58-303-drm-amd-add-more-cyan-skillfish-PCI-ids.patch
 	patches.kernel.org/6.12.58-304-drm-amdgpu-don-t-enable-SMU-on-cyan-skillfish.patch
 	patches.kernel.org/6.12.58-305-drm-amdgpu-add-support-for-cyan-skillfish-gpu.patch
+	patches.kernel.org/6.12.58-306-drm-amd-display-Fix-pbn_div-Calculation-Error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
