media: i2c: Kconfig: Ensure a dependency on HAVE_CLK for VIDEO_CAMERA_SENSOR (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11757,6 +11757,7 @@
 	patches.kernel.org/6.12.58-198-drm-bridge-cdns-dsi-Fix-REG_WAKEUP_TIME-value.patch
 	patches.kernel.org/6.12.58-199-drm-bridge-cdns-dsi-Don-t-fail-on-MIPI_DSI_MO.patch
 	patches.kernel.org/6.12.58-200-drm-tidss-Set-crtc-modesetting-parameters-wit.patch
+	patches.kernel.org/6.12.58-201-media-i2c-Kconfig-Ensure-a-dependency-on-HAVE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
