--- a/series.conf
+++ b/series.conf
@@ -11907,6 +11907,7 @@
 	patches.kernel.org/6.12.58-348-PCI-dwc-Verify-the-single-eDMA-IRQ-in-dw_pcie.patch
 	patches.kernel.org/6.12.58-349-crypto-ccp-Fix-incorrect-payload-size-calcula.patch
 	patches.kernel.org/6.12.58-350-crypto-caam-double-the-entropy-delay-interval.patch
+	patches.kernel.org/6.12.58-351-net-cls_cgroup-Fix-task_get_classid-during-qd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
