--- a/series.conf
+++ b/series.conf
@@ -11992,6 +11992,7 @@
 	patches.kernel.org/6.12.58-433-Bluetooth-btusb-Check-for-unexpected-bytes-wh.patch
 	patches.kernel.org/6.12.58-434-Bluetooth-SCO-Fix-UAF-on-sco_conn_free.patch
 	patches.kernel.org/6.12.58-435-Bluetooth-btusb-Add-new-VID-PID-13d3-3633-for.patch
+	patches.kernel.org/6.12.58-436-Bluetooth-bcsp-receive-data-only-if-registere.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
