--- a/series.conf
+++ b/series.conf
@@ -11857,6 +11857,7 @@
 	patches.kernel.org/6.12.58-298-net-call-cond_resched-less-often-in-__release.patch
 	patches.kernel.org/6.12.58-299-smsc911x-add-second-read-of-EEPROM-mac-when-p.patch
 	patches.kernel.org/6.12.58-300-iommu-amd-Skip-enabling-command-event-buffers.patch
+	patches.kernel.org/6.12.58-301-crypto-ccp-Skip-SEV-and-SNP-INIT-for-kdump-bo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
