--- a/series.conf
+++ b/series.conf
@@ -11673,6 +11673,7 @@
 	patches.kernel.org/6.12.58-114-hwmon-k10temp-Add-thermal-support-for-AMD-Fam.patch
 	patches.kernel.org/6.12.58-115-hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
 	patches.kernel.org/6.12.58-116-hwmon-lenovo-ec-sensors-Update-P8-supprt.patch
+	patches.kernel.org/6.12.58-117-hwmon-sbtsi_temp-AMD-CPU-extended-temperature.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
