--- a/series.conf
+++ b/series.conf
@@ -11873,6 +11873,7 @@
 	patches.kernel.org/6.12.58-314-wifi-iwlwifi-fw-Add-ASUS-to-PPAG-and-TAS-list.patch
 	patches.kernel.org/6.12.58-315-media-ov08x40-Fix-the-horizontal-flip-control.patch
 	patches.kernel.org/6.12.58-316-media-i2c-og01a1b-Specify-monochrome-media-bu.patch
+	patches.kernel.org/6.12.58-317-f2fs-fix-wrong-layout-information-on-16KB-pag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
