--- a/series.conf
+++ b/series.conf
@@ -11626,6 +11626,7 @@
 	patches.kernel.org/6.12.58-067-drm-sched-avoid-killing-parent-entity-on-chil.patch
 	patches.kernel.org/6.12.58-068-drm-nouveau-Fix-race-in-nouveau_sched_fini.patch
 	patches.kernel.org/6.12.58-069-drm-mediatek-Fix-device-use-after-free-on-unb.patch
+	patches.kernel.org/6.12.58-070-drm-ast-Clear-preserved-bits-from-register-ou.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
