blk-cgroup: fix possible deadlock while configuring policy (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11707,6 +11707,7 @@
 	patches.kernel.org/6.12.58-148-clocksource-drivers-vf-pit-Replace-raw_readl-.patch
 	patches.kernel.org/6.12.58-149-clocksource-drivers-timer-rtl-otto-Work-aroun.patch
 	patches.kernel.org/6.12.58-150-clocksource-drivers-timer-rtl-otto-Do-not-int.patch
+	patches.kernel.org/6.12.58-151-blk-cgroup-fix-possible-deadlock-while-config.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
