--- a/series.conf
+++ b/series.conf
@@ -11924,6 +11924,7 @@
 	patches.kernel.org/6.12.58-365-ethernet-Extend-device_get_mac_address-to-use.patch
 	patches.kernel.org/6.12.58-366-HID-i2c-hid-Resolve-touchpad-issues-on-Dell-s.patch
 	patches.kernel.org/6.12.58-367-drm-xe-guc-Return-an-error-code-if-the-GuC-lo.patch
+	patches.kernel.org/6.12.58-368-drm-amdgpu-reject-gang-submissions-under-SRIO.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
