--- a/series.conf
+++ b/series.conf
@@ -11776,6 +11776,7 @@
 	patches.kernel.org/6.12.58-217-media-imon-make-send_packet-more-robust.patch
 	patches.kernel.org/6.12.58-218-drm-panthor-Serialize-GPU-cache-flush-operati.patch
 	patches.kernel.org/6.12.58-219-HID-pidff-Use-direction-fix-only-for-conditio.patch
+	patches.kernel.org/6.12.58-220-HID-pidff-PERMISSIVE_CONTROL-quirk-autodetect.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
