--- a/series.conf
+++ b/series.conf
@@ -11833,6 +11833,7 @@
 	patches.kernel.org/6.12.58-274-crypto-qat-use-kcalloc-in-qat_uclo_map_objs_f.patch
 	patches.kernel.org/6.12.58-275-scsi-pm8001-Use-int-instead-of-u32-to-store-e.patch
 	patches.kernel.org/6.12.58-276-scsi-ufs-exynos-fsd-Gate-ref_clk-and-put-UFS-.patch
+	patches.kernel.org/6.12.58-277-ptp-Limit-time-setting-of-PTP-clocks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
