--- a/series.conf
+++ b/series.conf
@@ -11925,6 +11925,7 @@
 	patches.kernel.org/6.12.58-366-HID-i2c-hid-Resolve-touchpad-issues-on-Dell-s.patch
 	patches.kernel.org/6.12.58-367-drm-xe-guc-Return-an-error-code-if-the-GuC-lo.patch
 	patches.kernel.org/6.12.58-368-drm-amdgpu-reject-gang-submissions-under-SRIO.patch
+	patches.kernel.org/6.12.58-369-selftests-Makefile-include-INSTALL_DEP_TARGET.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
