--- a/series.conf
+++ b/series.conf
@@ -11708,6 +11708,7 @@
 	patches.kernel.org/6.12.58-149-clocksource-drivers-timer-rtl-otto-Work-aroun.patch
 	patches.kernel.org/6.12.58-150-clocksource-drivers-timer-rtl-otto-Do-not-int.patch
 	patches.kernel.org/6.12.58-151-blk-cgroup-fix-possible-deadlock-while-config.patch
+	patches.kernel.org/6.12.58-152-riscv-bpf-Fix-uninitialized-symbol-retval_off.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
