wifi: iwlwifi: fw: Add ASUS to PPAG and TAS list (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11870,6 +11870,7 @@
 	patches.kernel.org/6.12.58-311-drm-msm-make-sure-to-not-queue-up-recovery-mo.patch
 	patches.kernel.org/6.12.58-312-char-Use-list_del_init-in-misc_deregister-to-.patch
 	patches.kernel.org/6.12.58-313-PCI-endpoint-pci-epf-test-Limit-PCIe-BAR-size.patch
+	patches.kernel.org/6.12.58-314-wifi-iwlwifi-fw-Add-ASUS-to-PPAG-and-TAS-list.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
