ASoC: qcom: sc8280xp: explicitly set S16LE format in sc8280xp_be_hw_params_fixup() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11946,6 +11946,7 @@
 	patches.kernel.org/6.12.58-387-jfs-Verify-inode-mode-when-loading-from-disk.patch
 	patches.kernel.org/6.12.58-388-jfs-fix-uninitialized-waitqueue-in-transactio.patch
 	patches.kernel.org/6.12.58-389-drm-amdgpu-atom-Check-kcalloc-for-WS-buffer-i.patch
+	patches.kernel.org/6.12.58-390-ASoC-qcom-sc8280xp-explicitly-set-S16LE-forma.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
