ACPI: sysfs: Use ACPI_FREE() for freeing an ACPI object (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11656,6 +11656,7 @@
 	patches.kernel.org/6.12.58-097-firewire-ohci-move-self_id_complete-tracepoin.patch
 	patches.kernel.org/6.12.58-098-irqchip-sifive-plic-Respect-mask-state-when-s.patch
 	patches.kernel.org/6.12.58-099-io_uring-zctx-check-chained-notif-contexts.patch
+	patches.kernel.org/6.12.58-100-ACPI-sysfs-Use-ACPI_FREE-for-freeing-an-ACPI-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
