hwmon: (asus-ec-sensors) increase timeout for locking ACPI mutex (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11712,6 +11712,7 @@
 	patches.kernel.org/6.12.58-153-bpf-Clear-pfmemalloc-flag-when-freeing-all-fr.patch
 	patches.kernel.org/6.12.58-154-nvme-Use-non-zero-KATO-for-persistent-discove.patch
 	patches.kernel.org/6.12.58-155-uprobe-Do-not-emulate-sstep-original-instruct.patch
+	patches.kernel.org/6.12.58-156-hwmon-asus-ec-sensors-increase-timeout-for-lo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
