smb: client: validate change notify buffer before copy (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12103,6 +12103,7 @@
 	patches.kernel.org/6.12.58-544-parisc-Avoid-crash-due-to-unaligned-access-in.patch
 	patches.kernel.org/6.12.58-545-rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.kernel.org/6.12.58-546-x86-microcode-AMD-Add-more-known-models-to-en.patch
+	patches.kernel.org/6.12.58-547-smb-client-validate-change-notify-buffer-befo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
