--- a/series.conf
+++ b/series.conf
@@ -11861,6 +11861,7 @@
 	patches.kernel.org/6.12.58-302-iommu-apple-dart-Clear-stream-error-indicator.patch
 	patches.kernel.org/6.12.58-303-drm-amd-add-more-cyan-skillfish-PCI-ids.patch
 	patches.kernel.org/6.12.58-304-drm-amdgpu-don-t-enable-SMU-on-cyan-skillfish.patch
+	patches.kernel.org/6.12.58-305-drm-amdgpu-add-support-for-cyan-skillfish-gpu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
