--- a/series.conf
+++ b/series.conf
@@ -11667,6 +11667,7 @@
 	patches.kernel.org/6.12.58-108-ACPI-PRM-Skip-handlers-with-NULL-handler_addr.patch
 	patches.kernel.org/6.12.58-109-ACPI-resource-Skip-IRQ-override-on-ASUS-Vivob.patch
 	patches.kernel.org/6.12.58-110-ACPI-scan-Add-Intel-CVS-ACPI-HIDs-to-acpi_ign.patch
+	patches.kernel.org/6.12.58-111-thermal-gov_step_wise-Allow-cooling-level-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
