--- a/series.conf
+++ b/series.conf
@@ -11778,6 +11778,7 @@
 	patches.kernel.org/6.12.58-219-HID-pidff-Use-direction-fix-only-for-conditio.patch
 	patches.kernel.org/6.12.58-220-HID-pidff-PERMISSIVE_CONTROL-quirk-autodetect.patch
 	patches.kernel.org/6.12.58-221-drm-bridge-display-connector-don-t-set-OP_DET.patch
+	patches.kernel.org/6.12.58-222-drm-amdgpu-fix-nullptr-err-of-vm_handle_moved.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
