--- a/series.conf
+++ b/series.conf
@@ -11913,6 +11913,7 @@
 	patches.kernel.org/6.12.58-354-wifi-mt76-mt76_eeprom_override-to-int.patch
 	patches.kernel.org/6.12.58-355-ALSA-serial-generic-remove-shared-static-buff.patch
 	patches.kernel.org/6.12.58-356-wifi-mt76-mt7996-fix-memory-leak-on-mt7996_mc.patch
+	patches.kernel.org/6.12.58-357-drm-amdgpu-Use-memdup_array_user-in-amdgpu_cs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
