--- a/series.conf
+++ b/series.conf
@@ -12100,6 +12100,7 @@
 	patches.kernel.org/6.12.58-541-drm-sched-Fix-deadlock-in-drm_sched_entity_ki.patch
 	patches.kernel.org/6.12.58-542-Bluetooth-MGMT-Fix-OOB-access-in-parse_adv_mo.patch
 	patches.kernel.org/6.12.58-543-iommufd-Don-t-overflow-during-division-for-di.patch
+	patches.kernel.org/6.12.58-544-parisc-Avoid-crash-due-to-unaligned-access-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
