--- a/series.conf
+++ b/series.conf
@@ -11770,6 +11770,7 @@
 	patches.kernel.org/6.12.58-211-scsi-ufs-host-mediatek-Fix-auto-hibern8-timer.patch
 	patches.kernel.org/6.12.58-212-scsi-ufs-host-mediatek-Fix-PWM-mode-switch-is.patch
 	patches.kernel.org/6.12.58-213-scsi-ufs-host-mediatek-Assign-power-mode-user.patch
+	patches.kernel.org/6.12.58-214-scsi-ufs-host-mediatek-Change-reset-sequence-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
