arm64: zynqmp: Revert usb node drive strength and slew rate for zcu106 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11680,6 +11680,7 @@
 	patches.kernel.org/6.12.58-121-irqchip-loongson-pch-lpc-Use-legacy-domain-fo.patch
 	patches.kernel.org/6.12.58-122-cpufreq-ondemand-Update-the-efficient-idle-ch.patch
 	patches.kernel.org/6.12.58-123-arm64-zynqmp-Disable-coresight-by-default.patch
+	patches.kernel.org/6.12.58-124-arm64-zynqmp-Revert-usb-node-drive-strength-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
