tools/power x86_energy_perf_policy: Prefer driver HWP limits (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11718,6 +11718,7 @@
 	patches.kernel.org/6.12.58-159-selftests-bpf-Fix-flaky-bpf_cookie-selftest.patch
 	patches.kernel.org/6.12.58-160-tools-power-x86_energy_perf_policy-Fix-incorr.patch
 	patches.kernel.org/6.12.58-161-tools-power-x86_energy_perf_policy-Enhance-HW.patch
+	patches.kernel.org/6.12.58-162-tools-power-x86_energy_perf_policy-Prefer-dri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
