char: misc: Does not request module for miscdevice with dynamic minor (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11787,6 +11787,7 @@
 	patches.kernel.org/6.12.58-228-wifi-rtw89-fix-BSSID-comparison-for-non-trans.patch
 	patches.kernel.org/6.12.58-229-dm-error-mark-as-DM_TARGET_PASSES_INTEGRITY.patch
 	patches.kernel.org/6.12.58-230-char-misc-Make-misc_register-reentry-for-misc.patch
+	patches.kernel.org/6.12.58-231-char-misc-Does-not-request-module-for-miscdev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
