mips: lantiq: danube: rename stp node on EASY50712 reference board (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11826,6 +11826,7 @@
 	patches.kernel.org/6.12.58-267-mips-lantiq-danube-add-model-to-EASY50712-dts.patch
 	patches.kernel.org/6.12.58-268-mips-lantiq-danube-add-missing-device_type-in.patch
 	patches.kernel.org/6.12.58-269-mips-lantiq-xway-sysctrl-rename-stp-clock.patch
+	patches.kernel.org/6.12.58-270-mips-lantiq-danube-rename-stp-node-on-EASY507.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
