wifi: ath10k: Fix memory leak on unsupported WMI command (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11575,6 +11575,7 @@
 	patches.kernel.org/6.12.58-016-s390-pci-Restore-IRQ-unconditionally-for-the-.patch
 	patches.kernel.org/6.12.58-017-smb-client-fix-potential-cfid-UAF-in-smb2_que.patch
 	patches.kernel.org/6.12.58-018-x86-fpu-Ensure-XFD-state-on-signal-delivery.patch
+	patches.kernel.org/6.12.58-019-wifi-ath10k-Fix-memory-leak-on-unsupported-WM.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
