scsi: pm80xx: Fix race condition caused by static variables (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11804,6 +11804,7 @@
 	patches.kernel.org/6.12.58-245-net-ipv4-allow-directed-broadcast-routes-to-u.patch
 	patches.kernel.org/6.12.58-246-scsi-mpi3mr-Fix-I-O-failures-during-controlle.patch
 	patches.kernel.org/6.12.58-247-scsi-mpi3mr-Fix-controller-init-failure-on-fa.patch
+	patches.kernel.org/6.12.58-248-scsi-pm80xx-Fix-race-condition-caused-by-stat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
