drm/amdkfd: Handle lack of READ permissions in SVM mapping (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11779,6 +11779,7 @@
 	patches.kernel.org/6.12.58-220-HID-pidff-PERMISSIVE_CONTROL-quirk-autodetect.patch
 	patches.kernel.org/6.12.58-221-drm-bridge-display-connector-don-t-set-OP_DET.patch
 	patches.kernel.org/6.12.58-222-drm-amdgpu-fix-nullptr-err-of-vm_handle_moved.patch
+	patches.kernel.org/6.12.58-223-drm-amdkfd-Handle-lack-of-READ-permissions-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
