kbuild: uapi: Strip comments before size type check (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12042,6 +12042,7 @@
 	patches.kernel.org/6.12.58-483-fbdev-Add-bounds-checking-in-bit_putcs-to-fix.patch
 	patches.kernel.org/6.12.58-484-rtc-pcf2127-fix-watchdog-interrupt-mask-on-pc.patch
 	patches.kernel.org/6.12.58-485-net-wwan-t7xx-add-support-for-HP-DRMR-H01.patch
+	patches.kernel.org/6.12.58-486-kbuild-uapi-Strip-comments-before-size-type-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
