tty/vt: Add missing return value for VT_RESIZE in vt_ioctl() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11866,6 +11866,7 @@
 	patches.kernel.org/6.12.58-307-net-dsa-felix-support-phy-mode-10g-qxgmii.patch
 	patches.kernel.org/6.12.58-308-usb-gadget-f_hid-Fix-zero-length-packet-trans.patch
 	patches.kernel.org/6.12.58-309-usb-cdns3-gadget-Use-after-free-during-failed.patch
+	patches.kernel.org/6.12.58-310-tty-vt-Add-missing-return-value-for-VT_RESIZE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
