PCI: dwc: Verify the single eDMA IRQ in dw_pcie_edma_irq_verify() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11904,6 +11904,7 @@
 	patches.kernel.org/6.12.58-345-HID-asus-add-Z13-folio-to-generic-group-for-m.patch
 	patches.kernel.org/6.12.58-346-watchdog-s3c2410_wdt-Fix-max_timeout-being-ca.patch
 	patches.kernel.org/6.12.58-347-crypto-sun8i-ce-remove-channel-timeout-field.patch
+	patches.kernel.org/6.12.58-348-PCI-dwc-Verify-the-single-eDMA-IRQ-in-dw_pcie.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
