ext4: increase IO priority of fastcommit (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11981,6 +11981,7 @@
 	patches.kernel.org/6.12.58-422-accel-habanalabs-gaudi2-read-preboot-status-a.patch
 	patches.kernel.org/6.12.58-423-accel-habanalabs-support-mapping-cb-with-vmal.patch
 	patches.kernel.org/6.12.58-424-fs-ext4-change-GFP_KERNEL-to-GFP_NOFS-to-avoi.patch
+	patches.kernel.org/6.12.58-425-ext4-increase-IO-priority-of-fastcommit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
