HID: asus: add Z13 folio to generic group for multitouch to work (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11901,6 +11901,7 @@
 	patches.kernel.org/6.12.58-342-selftests-Replace-sleep-with-slowwait.patch
 	patches.kernel.org/6.12.58-343-net-devmem-expose-tcp_recvmsg_locked-errors.patch
 	patches.kernel.org/6.12.58-344-udp_tunnel-use-netdev_warn-instead-of-netdev_.patch
+	patches.kernel.org/6.12.58-345-HID-asus-add-Z13-folio-to-generic-group-for-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
